--- a/style.css
+++ b/style.css
@@ -301,26 +301,58 @@ textarea{
         width: 100%;
         font-size: 15px;
     }
-    /* *{
-        border: 1px solid red;
-    } */
+    *{
+        /* border: 1px solid red; */
+        padding: 0;
+        margin: 0;
+    }
    
     .togle{
         display: block;
     }
     .div-section1{
         display: none;
+        z-index: 3000;
+        height: 15rem;
     }
     .togle:hover+.div-section1{
         display: block;
         padding: 9px;
+        width: 70%;
+    }
+    .div-section2{
+        width: 100%;
+        margin: auto;
+    }
+    .div0{
+        width: 15rem;
+        margin-left: -10px;
     }
     .nav1{
         width: 100%;
-        font-size: 14px;
+        font-size: 16px;
+    }
+    .grace{
+        width: 65px;
+        height: 65px;
+        margin-top: 10px;
+    }
+    .parti1{
+        display: flex;
+        align-items: center;
+    }
+    main{
+        display: flex;
+        flex-direction: column;
     }
     .main2{
         width: 80%;
+        /* position: fixed; */
+        margin: auto;
+    }
+    .sous1{
+        display: flex;
+        flex-direction: column;
     }
     .photo1{
         display: flex;
@@ -331,6 +363,16 @@ textarea{
         flex-direction: column;
     }
     .cour{
+        display: flex;
+        flex-direction: column;
+    }
+    .cours1{
+        /* margin-left: 10px; */
+    }
+    .mots{
+        margin: 0;
+    }
+    .language{
         display: flex;
         flex-direction: column;
     }
