--- a/style.css
+++ b/style.css
@@ -72,7 +72,8 @@ main{
     display: flex;
     justify-content: space-between;
     gap: 50px;
-    padding: 5%;
+    margin: auto;
+    /* padding: 5%; */
 }
 .main2{
     border-radius: 12px;
