--- a/style.css
+++ b/style.css
@@ -71,7 +71,6 @@ body{
 main{
     display: flex;
     justify-content: space-between;
-    gap: 50px;
     margin: auto;
 
 }
@@ -123,6 +122,7 @@ h2{
     border: 1px solid transparent;
     box-shadow:  -1px -1px 3px 3px  rgba(58, 56, 56, 0.32);
     border-radius: 12px;
+    margin-left: 5rem;
   
 }
 /* parti4 */
